# advent2020

day1/: Cargo.toml
day1/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day3/: Cargo.toml
day3/benches/: part_one.rs
day3/src/: bin.rs  const_eval.rs  lib.rs  main.rs
day4/: Cargo.toml  DINK
day4/src/: main.rs
