[package]
name = "day3"
version = "0.1.0"
authors = ["Bart Willems <bwillems@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "part_one"
harness = false


[[bin]]
name = "bin"
path = "src/bin.rs"


[lib]
name = "day3"
path = "src/lib.rs"
